src/com/tang/intellij/devkt/lua/parser/LuaParser.java
// This is a generated file. Not intended for manual editing.
package com.tang.intellij.devkt.lua.parser;

import org.jetbrains.kotlin.com.intellij.lang.ASTNode;
import org.jetbrains.kotlin.com.intellij.lang.LightPsiParser;
import org.jetbrains.kotlin.com.intellij.lang.PsiBuilder;
import org.jetbrains.kotlin.com.intellij.lang.PsiBuilder.Marker;
import org.jetbrains.kotlin.com.intellij.lang.PsiParser;
import org.jetbrains.kotlin.com.intellij.psi.tree.IElementType;
import org.jetbrains.kotlin.com.intellij.psi.tree.TokenSet;

import static com.tang.intellij.devkt.lua.psi.LuaParserUtil.*;
import static com.tang.intellij.devkt.lua.psi.LuaTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LuaParser implements PsiParser, LightPsiParser {

	public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[]{create_token_set_(EXPR_LIST,
			VAR_LIST), create_token_set_(NAME_DEF, PARAM_NAME_DEF), create_token_set_(ARGS,
			LIST_ARGS,
			SINGLE_ARG), create_token_set_(BINARY_EXPR,
			CALL_EXPR,
			CLOSURE_EXPR,
			EXPR,
			INDEX_EXPR,
			LITERAL_EXPR,
			NAME_EXPR,
			PAREN_EXPR,
			TABLE_EXPR,
			UNARY_EXPR), create_token_set_(ASSIGN_STAT,
			BREAK_STAT,
			DO_STAT,
			EMPTY_STAT,
			EXPR_STAT,
			FOR_A_STAT,
			FOR_B_STAT,
			GOTO_STAT,
			IF_STAT,
			LABEL_STAT,
			REPEAT_STAT,
			RETURN_STAT,
			WHILE_STAT),};
	final static Parser checkFuncPrefix_parser_ = (b, l) -> checkFuncPrefix(b, l + 1);
	final static Parser parList_recover_parser_ = (b, l) -> parList_recover(b, l + 1);
	final static Parser stat_recover_parser_ = (b, l) -> stat_recover(b, l + 1);
	final static Parser tableField_recover_parser_ = (b, l) -> tableField_recover(b, l + 1);

	/* ********************************************************** */
	// (expr ',')* (expr |& ')')
	static boolean arg_expr_list(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "arg_expr_list")) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_);
		r = arg_expr_list_0(b, l + 1);
		p = r; // pin = 1
		r = r && arg_expr_list_1(b, l + 1);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	// (expr ',')*
	private static boolean arg_expr_list_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "arg_expr_list_0")) return false;
		int c = current_position_(b);
		while (true) {
			if (!arg_expr_list_0_0(b, l + 1)) break;
			if (!empty_element_parsed_guard_(b, "arg_expr_list_0", c)) break;
			c = current_position_(b);
		}
		return true;
	}

	// expr ','
	private static boolean arg_expr_list_0_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "arg_expr_list_0_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = expr(b, l + 1);
		r = r && consumeToken(b, COMMA);
		exit_section_(b, m, null, r);
		return r;
	}

	// expr |& ')'
	private static boolean arg_expr_list_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "arg_expr_list_1")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = expr(b, l + 1);
		if (!r) r = arg_expr_list_1_1(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// & ')'
	private static boolean arg_expr_list_1_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "arg_expr_list_1_1")) return false;
		boolean r;
		Marker m = enter_section_(b, l, _AND_);
		r = consumeToken(b, RPAREN);
		exit_section_(b, l, m, r, false, null);
		return r;
	}

	/* ********************************************************** */
	// listArgs | singleArg {
	// }
	public static boolean args(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "args")) return false;
		boolean r;
		Marker m = enter_section_(b, l, _COLLAPSE_, ARGS, "<args>");
		r = listArgs(b, l + 1);
		if (!r) r = args_1(b, l + 1);
		exit_section_(b, l, m, r, false, null);
		return r;
	}

	// singleArg {
	// }
	private static boolean args_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "args_1")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = singleArg(b, l + 1);
		r = r && args_1_1(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// {
	// }
	private static boolean args_1_1(PsiBuilder b, int l) {
		return true;
	}

	/* ********************************************************** */
	// varList '=' exprList
	public static boolean assignStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "assignStat")) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, ASSIGN_STAT, "<assign stat>");
		r = varList(b, l + 1);
		r = r && consumeToken(b, ASSIGN);
		p = r; // pin = 2
		r = r && exprList(b, l + 1);
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		register_hook_(b, RIGHT_BINDER, MY_RIGHT_COMMENT_BINDER);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	/* ********************************************************** */
	// binaryOp expr
	public static boolean binaryExpr(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "binaryExpr")) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _LEFT_, BINARY_EXPR, "<binary expr>");
		r = binaryOp(b, l + 1);
		p = r; // pin = 1
		r = r && expr(b, l + 1);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	/* ********************************************************** */
	// '+' | '-' | '*' | '/' | '^' | '%' | '..' |
	//     '<' | '<=' | '>' | '>=' | '==' | '~=' |
	//     'and' | 'or'
	//     // lua5.3
	//     | '|' | '&' | '>>' | '<<' | '~' | '//'
	public static boolean binaryOp(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "binaryOp")) return false;
		boolean r;
		Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<binary op>");
		r = consumeToken(b, PLUS);
		if (!r) r = consumeToken(b, MINUS);
		if (!r) r = consumeToken(b, MULT);
		if (!r) r = consumeToken(b, DIV);
		if (!r) r = consumeToken(b, EXP);
		if (!r) r = consumeToken(b, MOD);
		if (!r) r = consumeToken(b, CONCAT);
		if (!r) r = consumeToken(b, LT);
		if (!r) r = consumeToken(b, LE);
		if (!r) r = consumeToken(b, GT);
		if (!r) r = consumeToken(b, GE);
		if (!r) r = consumeToken(b, EQ);
		if (!r) r = consumeToken(b, NE);
		if (!r) r = consumeToken(b, AND);
		if (!r) r = consumeToken(b, OR);
		if (!r) r = consumeToken(b, BIT_OR);
		if (!r) r = consumeToken(b, BIT_AND);
		if (!r) r = consumeToken(b, BIT_RTRT);
		if (!r) r = consumeToken(b, BIT_LTLT);
		if (!r) r = consumeToken(b, BIT_TILDE);
		if (!r) r = consumeToken(b, DOUBLE_DIV);
		exit_section_(b, l, m, r, false, null);
		return r;
	}

	/* ********************************************************** */
	// stat_semi*
	public static boolean block(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "block")) return false;
		Marker m = enter_section_(b, l, _NONE_, BLOCK, "<block>");
		int c = current_position_(b);
		while (true) {
			if (!stat_semi(b, l + 1)) break;
			if (!empty_element_parsed_guard_(b, "block", c)) break;
			c = current_position_(b);
		}
		exit_section_(b, l, m, true, false, null);
		return true;
	}

	/* ********************************************************** */
	// break
	public static boolean breakStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "breakStat")) return false;
		if (!nextTokenIs(b, BREAK)) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeToken(b, BREAK);
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, m, BREAK_STAT, r);
		return r;
	}

	/* ********************************************************** */
	// args {
	// }
	public static boolean callExpr(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "callExpr")) return false;
		boolean r;
		Marker m = enter_section_(b, l, _LEFT_, CALL_EXPR, "<call expr>");
		r = args(b, l + 1);
		r = r && callExpr_1(b, l + 1);
		exit_section_(b, l, m, r, false, null);
		return r;
	}

	// {
	// }
	private static boolean callExpr_1(PsiBuilder b, int l) {
		return true;
	}

	/* ********************************************************** */
	// ID ('.' | ':') ID
	static boolean checkFuncPrefix(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "checkFuncPrefix")) return false;
		if (!nextTokenIs(b, ID)) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeToken(b, ID);
		r = r && checkFuncPrefix_1(b, l + 1);
		r = r && consumeToken(b, ID);
		exit_section_(b, m, null, r);
		return r;
	}

	// '.' | ':'
	private static boolean checkFuncPrefix_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "checkFuncPrefix_1")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeToken(b, DOT);
		if (!r) r = consumeToken(b, COLON);
		exit_section_(b, m, null, r);
		return r;
	}

	/* ********************************************************** */
	// 'function' classMethodName funcBody
	public static boolean classMethodDef(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "classMethodDef")) return false;
		if (!nextTokenIs(b, FUNCTION)) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, CLASS_METHOD_DEF, null);
		r = consumeToken(b, FUNCTION);
		r = r && classMethodName(b, l + 1);
		p = r; // pin = 2
		r = r && funcBody(b, l + 1);
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	/* ********************************************************** */
	// nameExpr (funcPrefixRef)* (('.' ID) | (':' ID))
	public static boolean classMethodName(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "classMethodName")) return false;
		if (!nextTokenIs(b, ID)) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, CLASS_METHOD_NAME, null);
		r = nameExpr(b, l + 1);
		p = r; // pin = 1
		r = r && report_error_(b, classMethodName_1(b, l + 1));
		r = p && classMethodName_2(b, l + 1) && r;
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	// (funcPrefixRef)*
	private static boolean classMethodName_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "classMethodName_1")) return false;
		int c = current_position_(b);
		while (true) {
			if (!classMethodName_1_0(b, l + 1)) break;
			if (!empty_element_parsed_guard_(b, "classMethodName_1", c)) break;
			c = current_position_(b);
		}
		return true;
	}

	// (funcPrefixRef)
	private static boolean classMethodName_1_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "classMethodName_1_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = funcPrefixRef(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// ('.' ID) | (':' ID)
	private static boolean classMethodName_2(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "classMethodName_2")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = classMethodName_2_0(b, l + 1);
		if (!r) r = classMethodName_2_1(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// '.' ID
	private static boolean classMethodName_2_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "classMethodName_2_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeTokens(b, 0, DOT, ID);
		exit_section_(b, m, null, r);
		return r;
	}

	// ':' ID
	private static boolean classMethodName_2_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "classMethodName_2_1")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeTokens(b, 0, COLON, ID);
		exit_section_(b, m, null, r);
		return r;
	}

	/* ********************************************************** */
	// 'function' funcBody
	public static boolean closureExpr(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "closureExpr")) return false;
		if (!nextTokenIs(b, FUNCTION)) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeToken(b, FUNCTION);
		r = r && funcBody(b, l + 1);
		exit_section_(b, m, CLOSURE_EXPR, r);
		return r;
	}

	/* ********************************************************** */
	// classMethodDef | funcDef | localFuncDef | localDef
	static boolean defStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "defStat")) return false;
		if (!nextTokenIs(b, "", FUNCTION, LOCAL)) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = classMethodDef(b, l + 1);
		if (!r) r = funcDef(b, l + 1);
		if (!r) r = localFuncDef(b, l + 1);
		if (!r) r = localDef(b, l + 1);
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, m, null, r);
		return r;
	}

	/* ********************************************************** */
	// 'do' <<lazyBlock>> 'end'
	public static boolean doStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "doStat")) return false;
		if (!nextTokenIs(b, DO)) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, DO_STAT, null);
		r = consumeToken(b, DO);
		p = r; // pin = 1
		r = r && report_error_(b, lazyBlock(b, l + 1));
		r = p && consumeToken(b, END) && r;
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	/* ********************************************************** */
	// ';'
	public static boolean emptyStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "emptyStat")) return false;
		if (!nextTokenIs(b, SEMI)) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeToken(b, SEMI);
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, m, EMPTY_STAT, r);
		return r;
	}

	/* ********************************************************** */
	// <<parseExpr>> {
	// }
	public static boolean expr(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "expr")) return false;
		boolean r;
		Marker m = enter_section_(b, l, _COLLAPSE_, EXPR, "<expr>");
		r = parseExpr(b, l + 1);
		r = r && expr_1(b, l + 1);
		exit_section_(b, l, m, r, false, null);
		return r;
	}

	// {
	// }
	private static boolean expr_1(PsiBuilder b, int l) {
		return true;
	}

	/* ********************************************************** */
	// expr (',' expr)* {
	// }
	public static boolean exprList(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "exprList")) return false;
		boolean r;
		Marker m = enter_section_(b, l, _NONE_, EXPR_LIST, "<expr list>");
		r = expr(b, l + 1);
		r = r && exprList_1(b, l + 1);
		r = r && exprList_2(b, l + 1);
		exit_section_(b, l, m, r, false, null);
		return r;
	}

	// (',' expr)*
	private static boolean exprList_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "exprList_1")) return false;
		int c = current_position_(b);
		while (true) {
			if (!exprList_1_0(b, l + 1)) break;
			if (!empty_element_parsed_guard_(b, "exprList_1", c)) break;
			c = current_position_(b);
		}
		return true;
	}

	// ',' expr
	private static boolean exprList_1_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "exprList_1_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeToken(b, COMMA);
		r = r && expr(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// {
	// }
	private static boolean exprList_2(PsiBuilder b, int l) {
		return true;
	}

	/* ********************************************************** */
	// expr {
	// }
	public static boolean exprStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "exprStat")) return false;
		boolean r;
		Marker m = enter_section_(b, l, _NONE_, EXPR_STAT, "<expr stat>");
		r = expr(b, l + 1);
		r = r && exprStat_1(b, l + 1);
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, l, m, r, false, null);
		return r;
	}

	// {
	// }
	private static boolean exprStat_1(PsiBuilder b, int l) {
		return true;
	}

	/* ********************************************************** */
	// (tableField (tableFieldSep tableField)* (tableFieldSep)?)?
	static boolean fieldList(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "fieldList")) return false;
		fieldList_0(b, l + 1);
		return true;
	}

	// tableField (tableFieldSep tableField)* (tableFieldSep)?
	private static boolean fieldList_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "fieldList_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = tableField(b, l + 1);
		r = r && fieldList_0_1(b, l + 1);
		r = r && fieldList_0_2(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// (tableFieldSep tableField)*
	private static boolean fieldList_0_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "fieldList_0_1")) return false;
		int c = current_position_(b);
		while (true) {
			if (!fieldList_0_1_0(b, l + 1)) break;
			if (!empty_element_parsed_guard_(b, "fieldList_0_1", c)) break;
			c = current_position_(b);
		}
		return true;
	}

	// tableFieldSep tableField
	private static boolean fieldList_0_1_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "fieldList_0_1_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = tableFieldSep(b, l + 1);
		r = r && tableField(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// (tableFieldSep)?
	private static boolean fieldList_0_2(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "fieldList_0_2")) return false;
		fieldList_0_2_0(b, l + 1);
		return true;
	}

	// (tableFieldSep)
	private static boolean fieldList_0_2_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "fieldList_0_2_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = tableFieldSep(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	/* ********************************************************** */
	// 'for' paramNameDef '=' expr ',' expr (',' expr)? 'do' <<lazyBlock>> 'end'
	public static boolean forAStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "forAStat")) return false;
		if (!nextTokenIs(b, FOR)) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, FOR_A_STAT, null);
		r = consumeToken(b, FOR);
		r = r && paramNameDef(b, l + 1);
		r = r && consumeToken(b, ASSIGN);
		p = r; // pin = 3
		r = r && report_error_(b, expr(b, l + 1));
		r = p && report_error_(b, consumeToken(b, COMMA)) && r;
		r = p && report_error_(b, expr(b, l + 1)) && r;
		r = p && report_error_(b, forAStat_6(b, l + 1)) && r;
		r = p && report_error_(b, consumeToken(b, DO)) && r;
		r = p && report_error_(b, lazyBlock(b, l + 1)) && r;
		r = p && consumeToken(b, END) && r;
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	// (',' expr)?
	private static boolean forAStat_6(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "forAStat_6")) return false;
		forAStat_6_0(b, l + 1);
		return true;
	}

	// ',' expr
	private static boolean forAStat_6_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "forAStat_6_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = consumeToken(b, COMMA);
		r = r && expr(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	/* ********************************************************** */
	// 'for' parList 'in' exprList 'do' <<lazyBlock>> 'end'
	public static boolean forBStat(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "forBStat")) return false;
		if (!nextTokenIs(b, FOR)) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, FOR_B_STAT, null);
		r = consumeToken(b, FOR);
		p = r; // pin = 1
		r = r && report_error_(b, parList(b, l + 1));
		r = p && report_error_(b, consumeToken(b, IN)) && r;
		r = p && report_error_(b, exprList(b, l + 1)) && r;
		r = p && report_error_(b, consumeToken(b, DO)) && r;
		r = p && report_error_(b, lazyBlock(b, l + 1)) && r;
		r = p && consumeToken(b, END) && r;
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	/* ********************************************************** */
	// '(' (parList)? ')' <<lazyBlock>>? 'end'
	public static boolean funcBody(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "funcBody")) return false;
		if (!nextTokenIs(b, LPAREN)) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, FUNC_BODY, null);
		r = consumeToken(b, LPAREN);
		p = r; // pin = 1
		r = r && report_error_(b, funcBody_1(b, l + 1));
		r = p && report_error_(b, consumeToken(b, RPAREN)) && r;
		r = p && report_error_(b, funcBody_3(b, l + 1)) && r;
		r = p && consumeToken(b, END) && r;
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}

	// (parList)?
	private static boolean funcBody_1(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "funcBody_1")) return false;
		funcBody_1_0(b, l + 1);
		return true;
	}

	// (parList)
	private static boolean funcBody_1_0(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "funcBody_1_0")) return false;
		boolean r;
		Marker m = enter_section_(b);
		r = parList(b, l + 1);
		exit_section_(b, m, null, r);
		return r;
	}

	// <<lazyBlock>>?
	private static boolean funcBody_3(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "funcBody_3")) return false;
		lazyBlock(b, l + 1);
		return true;
	}

	/* ********************************************************** */
	// 'function' ID funcBody
	public static boolean funcDef(PsiBuilder b, int l) {
		if (!recursion_guard_(b, l, "funcDef")) return false;
		if (!nextTokenIs(b, FUNCTION)) return false;
		boolean r, p;
		Marker m = enter_section_(b, l, _NONE_, FUNC_DEF, null);
		r = consumeTokens(b, 1, FUNCTION, ID);
		p = r; // pin = 1
		r = r && funcBody(b, l + 1);
		register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
		exit_section_(b, l, m, r, p, null);
		return r || p;
	}
